testsuite/tests/semantic_errors/invalid_array_concat/test.adb
procedure Test is
   X : Integer := 2;
   V : String := "ab" & X;
   pragma Test_Statement;
begin
   null;
end Test;
